# dr-llm-train-data-processor

./: .gitignore  .gitmodules  README.md  download.py  pyproject.toml  requirements.txt
configs/: config.yml
docs/: dataset_strategy.md
scripts/: download.py  upload_dolmo_dataset_S3.sh
src/data_radar_dolma_wrapper/: cli.py  downloader.py  processing.py  vendor_dolma.py
